# SeqDatasets

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md
seqdatasets/: __init__.py  _datasets.py  _utils.py
seqdatasets/random1000/random1000_seqs.zarr/: .zattrs  .zmetadata
seqdatasets/random1000/random1000_seqs.zarr/activity_0/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_1/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_2/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_3/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_4/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_5/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_6/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_7/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_8/: 0
seqdatasets/random1000/random1000_seqs.zarr/activity_9/: .zarray  0
seqdatasets/random1000/random1000_seqs.zarr/label_0/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_1/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_2/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_3/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_4/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_5/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_6/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_7/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_8/: 0
seqdatasets/random1000/random1000_seqs.zarr/label_9/: .zarray  0
seqdatasets/random1000/random1000_seqs.zarr/name/: .zarray  0
(+2 files in other folders)
